service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service-svc-26
  namespace: lab-london
spec:
  ports:
    - port: 8080
  selector:
    app: cart-service-26
  type: NodePort
